--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,12 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.inicio{
+  margin-top: -100px;
+  background: hsla(0, 0%, 100%, 0.8);
+  backdrop-filter: blur(30px);
+  
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
